--- a/callback-plugin/plugin-paper/src/main/resources/plugin.yml
+++ b/callback-plugin/plugin-paper/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ api-version: 1.20
 website: github.com/estaria-world
 author: MrManHD
 
-main: world.estaria.minecraft.callback.plugin.paper.LimboPlugin
+main: world.estaria.minecraft.callback.plugin.paper.SpigotPlugin
 
 depend:
   - spigot-dependency-loader
